--- a/backend/test.ipynb
+++ b/backend/test.ipynb
@@ -4,44 +4,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Answer id: 718810163 can not be find'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m survey_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m12688491\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      9\u001b[0m survey_id_2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m12032803\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 11\u001b[0m questionpro \u001b[38;5;241m=\u001b[39m QuestionPro(survey_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m12032803\u001b[39m\u001b[38;5;124m\"\u001b[39m, api_key\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m61d15ae9-8995-4f6b-88ac-3a66e752a3cc\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\cpara\\backend\\engine\\src_platform\\questionpro\\main.py:60\u001b[0m, in \u001b[0;36mQuestionPro.__init__\u001b[1;34m(self, survey_id, api_key)\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mheaders \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mapi-key\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mapi_key}\n\u001b[0;32m     59\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mresponse \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_response()\n\u001b[1;32m---> 60\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_data()\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\cpara\\backend\\engine\\src_platform\\questionpro\\main.py:168\u001b[0m, in \u001b[0;36mQuestionPro._get_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    164\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m answer \u001b[38;5;129;01min\u001b[39;00m response_answer[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswerValues\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[0;32m    165\u001b[0m     answer_values \u001b[38;5;241m=\u001b[39m answer[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m--> 168\u001b[0m     root_answer \u001b[38;5;241m=\u001b[39m find_answer(answer[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswerID\u001b[39m\u001b[38;5;124m'\u001b[39m], answer_list)  \n\u001b[0;32m    169\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m root_answer \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    170\u001b[0m         root_answer[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresponses\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mid\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\cpara\\backend\\engine\\src_platform\\questionpro\\main.py:35\u001b[0m, in \u001b[0;36mfind_answer\u001b[1;34m(answer_id, answer_list)\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mint\u001b[39m(answer_id) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     33\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m---> 35\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAnswer id: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00manswer_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m can not be find\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Answer id: 718810163 can not be find'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import asyncio\n",
     "import nest_asyncio\n",
     "\n",
     "from engine.src_platform import QuestionPro\n",
+    "from engine.survey import Survey\n",
     "\n",
     "nest_asyncio.apply()\n",
     "\n",
     "survey_id=\"12688491\"\n",
     "survey_id_2 = \"12032803\"\n",
     "\n",
-    "questionpro = QuestionPro(survey_id=\"12032803\", api_key=\"61d15ae9-8995-4f6b-88ac-3a66e752a3cc\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = questionpro.response\n",
-    "data = questionpro._get_data()"
+    "questionpro = QuestionPro(survey_id=survey_id, api_key=\"61d15ae9-8995-4f6b-88ac-3a66e752a3cc\")\n",
+    "survey = Survey(src_platform=questionpro)\n"
    ]
   },
   {
@@ -52,94 +29,20 @@
     {
      "data": {
       "text/plain": [
-       "[{'id': '144286541',\n",
-       "  'code': 'Q6_1',\n",
-       "  'text': 'Test Matrix TEXT_MTRow1',\n",
-       "  'order': 6.1,\n",
-       "  'type': 'text_matrix',\n",
-       "  'answers': ['768621559', '768621560']},\n",
-       " {'id': '144286542',\n",
-       "  'code': 'Q6_2',\n",
-       "  'text': 'Test Matrix TEXT_MTRow2',\n",
-       "  'order': 6.2,\n",
-       "  'type': 'text_matrix',\n",
-       "  'answers': ['768621561', '768621562']},\n",
-       " {'id': '144283383',\n",
-       "  'code': 'Q5_1',\n",
-       "  'text': 'Test MA Matrix_MAMA-Row1',\n",
-       "  'order': 5.1,\n",
-       "  'type': 'ma_matrix',\n",
-       "  'answers': ['768601503', '768601504']},\n",
-       " {'id': '144283384',\n",
-       "  'code': 'Q5_2',\n",
-       "  'text': 'Test MA Matrix_MAMA-Row2',\n",
-       "  'order': 5.2,\n",
-       "  'type': 'ma_matrix',\n",
-       "  'answers': ['768601505', '768601506']},\n",
-       " {'id': '144283380',\n",
-       "  'code': 'Q4_1',\n",
-       "  'text': 'Test SA Matrix_SAMA-Row1',\n",
-       "  'order': 4.1,\n",
-       "  'type': 'sa',\n",
-       "  'answers': ['768601495', '768601496']},\n",
-       " {'id': '144283381',\n",
-       "  'code': 'Q4_2',\n",
-       "  'text': 'Test SA Matrix_SAMA-Row2',\n",
-       "  'order': 4.2,\n",
-       "  'type': 'sa',\n",
-       "  'answers': ['768601497', '768601498']},\n",
-       " {'id': '144283376',\n",
-       "  'code': 'Q2',\n",
-       "  'text': 'Test MA',\n",
-       "  'order': 2,\n",
-       "  'type': 'ma',\n",
-       "  'answers': ['768601486',\n",
-       "   '768601487',\n",
-       "   '768601488',\n",
-       "   '768601490',\n",
-       "   '768601492']},\n",
-       " {'id': '144283375',\n",
-       "  'code': 'Q1',\n",
-       "  'text': 'Test SA',\n",
-       "  'order': 1,\n",
-       "  'type': 'sa',\n",
-       "  'answers': ['768601482', '768601483', '768601484', '768601485']},\n",
-       " {'id': '144283377_T1',\n",
-       "  'code': 'Q3_1T1',\n",
-       "  'text': '_Test Text Q3 1_T1',\n",
-       "  'order': 3.11,\n",
-       "  'type': 'text',\n",
-       "  'answers': ['768601493_1', '768601493_2']},\n",
-       " {'id': '144283379_T1',\n",
-       "  'code': 'Q3_2T1',\n",
-       "  'text': '_Test Text Q3 2_T1',\n",
-       "  'order': 3.21,\n",
-       "  'type': 'text',\n",
-       "  'answers': ['768601494_1', '768601494_2']},\n",
-       " {'id': '144286541_T1',\n",
-       "  'code': 'Q6_1T1',\n",
-       "  'text': 'Test Matrix TEXT_MTRow1_T1',\n",
-       "  'order': 6.109999999999999,\n",
-       "  'type': 'text',\n",
-       "  'answers': ['768621559_1', '768621559_2']},\n",
-       " {'id': '144286541_T2',\n",
-       "  'code': 'Q6_1T2',\n",
-       "  'text': 'Test Matrix TEXT_MTRow1_T2',\n",
-       "  'order': 6.109999999999999,\n",
-       "  'type': 'text',\n",
-       "  'answers': ['768621560_1', '768621560_2']},\n",
-       " {'id': '144286542_T1',\n",
-       "  'code': 'Q6_2T1',\n",
-       "  'text': 'Test Matrix TEXT_MTRow2_T1',\n",
-       "  'order': 6.21,\n",
-       "  'type': 'text',\n",
-       "  'answers': ['768621561_1', '768621561_2']},\n",
-       " {'id': '144286542_T2',\n",
-       "  'code': 'Q6_2T2',\n",
-       "  'text': 'Test Matrix TEXT_MTRow2_T2',\n",
-       "  'order': 6.21,\n",
-       "  'type': 'text',\n",
-       "  'answers': ['768621562_1', '768621562_2']}]"
+       "[Question(code=Q6_1, text=Test Matrix TEXT_MTRow1, type=text_matrix, num_answers=2),\n",
+       " Question(code=Q6_2, text=Test Matrix TEXT_MTRow2, type=text_matrix, num_answers=2),\n",
+       " Question(code=Q5_1, text=Test MA Matrix_MAMA-Row1, type=ma_matrix, num_answers=2),\n",
+       " Question(code=Q5_2, text=Test MA Matrix_MAMA-Row2, type=ma_matrix, num_answers=2),\n",
+       " Question(code=Q4_1, text=Test SA Matrix_SAMA-Row1, type=sa_matrix, num_answers=2),\n",
+       " Question(code=Q4_2, text=Test SA Matrix_SAMA-Row2, type=sa_matrix, num_answers=2),\n",
+       " Question(code=Q2, text=Test MA, type=ma, num_answers=5),\n",
+       " Question(code=Q1, text=Test SA, type=sa, num_answers=4),\n",
+       " Question(code=Q3_1T1, text=_Test Text Q3 1_, type=text, num_answers=2),\n",
+       " Question(code=Q3_2T1, text=_Test Text Q3 2_, type=text, num_answers=2),\n",
+       " Question(code=Q6_1T1, text=Test Matrix TEXT_MTRow1_MTCol1, type=text, num_answers=2),\n",
+       " Question(code=Q6_1T2, text=Test Matrix TEXT_MTRow1_MTCol2, type=text, num_answers=2),\n",
+       " Question(code=Q6_2T1, text=Test Matrix TEXT_MTRow2_MTCol1, type=text, num_answers=2),\n",
+       " Question(code=Q6_2T2, text=Test Matrix TEXT_MTRow2_MTCol2, type=text, num_answers=2)]"
       ]
      },
      "execution_count": 4,
@@ -148,191 +51,7 @@
     }
    ],
    "source": [
-    "data['questions']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': '768621559',\n",
-       "  'scale': 1,\n",
-       "  'text': 'MTCol1',\n",
-       "  'question': '144286541',\n",
-       "  'responses': ['151680120', '151680106']},\n",
-       " {'id': '768621560',\n",
-       "  'scale': 2,\n",
-       "  'text': 'MTCol2',\n",
-       "  'question': '144286541',\n",
-       "  'responses': ['151680120', '151680106']},\n",
-       " {'id': '768621561',\n",
-       "  'scale': 1,\n",
-       "  'text': 'MTCol1',\n",
-       "  'question': '144286542',\n",
-       "  'responses': ['151680120', '151680106']},\n",
-       " {'id': '768621562',\n",
-       "  'scale': 2,\n",
-       "  'text': 'MTCol2',\n",
-       "  'question': '144286542',\n",
-       "  'responses': ['151680120', '151680106']},\n",
-       " {'id': '768601503',\n",
-       "  'scale': 1,\n",
-       "  'text': 'MAMA-Col1',\n",
-       "  'question': '144283383',\n",
-       "  'responses': ['151680120', '151680106']},\n",
-       " {'id': '768601504',\n",
-       "  'scale': 2,\n",
-       "  'text': 'MAMA-Col2',\n",
-       "  'question': '144283383',\n",
-       "  'responses': ['151680120', '151680106']},\n",
-       " {'id': '768601505',\n",
-       "  'scale': 1,\n",
-       "  'text': 'MAMA-Col1',\n",
-       "  'question': '144283384',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768601506',\n",
-       "  'scale': 2,\n",
-       "  'text': 'MAMA-Col2',\n",
-       "  'question': '144283384',\n",
-       "  'responses': ['151680120', '151680106']},\n",
-       " {'id': '768601495',\n",
-       "  'scale': 1,\n",
-       "  'text': 'SAMA-Col1',\n",
-       "  'question': '144283380',\n",
-       "  'responses': ['151680120', '151680106']},\n",
-       " {'id': '768601496',\n",
-       "  'scale': 2,\n",
-       "  'text': 'SAMA-Col2',\n",
-       "  'question': '144283380',\n",
-       "  'responses': []},\n",
-       " {'id': '768601497',\n",
-       "  'scale': 1,\n",
-       "  'text': 'SAMA-Col1',\n",
-       "  'question': '144283381',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768601498',\n",
-       "  'scale': 2,\n",
-       "  'text': 'SAMA-Col2',\n",
-       "  'question': '144283381',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768601486',\n",
-       "  'scale': 1,\n",
-       "  'text': 'MA1',\n",
-       "  'question': '144283376',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768601487',\n",
-       "  'scale': 2,\n",
-       "  'text': 'MA2',\n",
-       "  'question': '144283376',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768601488',\n",
-       "  'scale': 3,\n",
-       "  'text': 'MA3',\n",
-       "  'question': '144283376',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768601490',\n",
-       "  'scale': 4,\n",
-       "  'text': 'MA4',\n",
-       "  'question': '144283376',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768601492',\n",
-       "  'scale': 5,\n",
-       "  'text': 'MA5',\n",
-       "  'question': '144283376',\n",
-       "  'responses': []},\n",
-       " {'id': '768601482',\n",
-       "  'scale': 1,\n",
-       "  'text': 'SA1',\n",
-       "  'question': '144283375',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768601483',\n",
-       "  'scale': 2,\n",
-       "  'text': 'SA2',\n",
-       "  'question': '144283375',\n",
-       "  'responses': []},\n",
-       " {'id': '768601484',\n",
-       "  'scale': 3,\n",
-       "  'text': 'SA3',\n",
-       "  'question': '144283375',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768601485',\n",
-       "  'scale': 4,\n",
-       "  'text': 'SA4',\n",
-       "  'question': '144283375',\n",
-       "  'responses': []},\n",
-       " {'id': '768601493_1',\n",
-       "  'scale': 1,\n",
-       "  'text': 'VCVAW',\n",
-       "  'question': '144283377_T1',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768601494_1',\n",
-       "  'scale': 1,\n",
-       "  'text': 'ASWQ',\n",
-       "  'question': '144283379_T1',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768621559_1',\n",
-       "  'scale': 1,\n",
-       "  'text': '[MTCol1] JHHU',\n",
-       "  'question': '144286541_T1',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768621560_1',\n",
-       "  'scale': 1,\n",
-       "  'text': '[MTCol2] JBJB',\n",
-       "  'question': '144286541_T2',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768621561_1',\n",
-       "  'scale': 1,\n",
-       "  'text': '[MTCol1] CGFC',\n",
-       "  'question': '144286542_T1',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768621562_1',\n",
-       "  'scale': 1,\n",
-       "  'text': '[MTCol2] JHBW',\n",
-       "  'question': '144286542_T2',\n",
-       "  'responses': ['151680120']},\n",
-       " {'id': '768601493_2',\n",
-       "  'scale': 2,\n",
-       "  'text': 'ASC',\n",
-       "  'question': '144283377_T1',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768601494_2',\n",
-       "  'scale': 2,\n",
-       "  'text': 'CASAS',\n",
-       "  'question': '144283379_T1',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768621559_2',\n",
-       "  'scale': 2,\n",
-       "  'text': '[MTCol1] CASVC',\n",
-       "  'question': '144286541_T1',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768621560_2',\n",
-       "  'scale': 2,\n",
-       "  'text': '[MTCol2] DVEEW',\n",
-       "  'question': '144286541_T2',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768621561_2',\n",
-       "  'scale': 2,\n",
-       "  'text': '[MTCol1] WWQ',\n",
-       "  'question': '144286542_T1',\n",
-       "  'responses': ['151680106']},\n",
-       " {'id': '768621562_2',\n",
-       "  'scale': 2,\n",
-       "  'text': '[MTCol2] QWAS',\n",
-       "  'question': '144286542_T2',\n",
-       "  'responses': ['151680106']}]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['answers']"
+    "survey.questions"
    ]
   },
   {
