--- a/paam-backend/test.ipynb
+++ b/paam-backend/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
-    "from app.engine import Survey, QuestionPro"
+    "from app.engine import Survey, QuestionPro\n",
+    "from app.engine.ai import PAAMSupervisor\n",
+    "from langchain_core.messages import HumanMessage\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,99 +48,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "from langgraph.graph import StateGraph, START, END, MessagesState\n",
-    "from langgraph.graph.message import add_messages\n",
-    "from langgraph.types import Command\n",
-    "from langchain_core.messages import HumanMessage, BaseMessage, SystemMessage\n",
-    "from langchain_core.tools import tool\n",
-    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
-    "from langgraph.prebuilt import create_react_agent\n",
-    "\n",
-    "\n",
-    "from typing_extensions import TypedDict, Literal, Annotated, Sequence\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "llm = ChatOpenAI(model='gpt-3.5-turbo', streaming=True)\n",
-    "\n",
-    "search_tool = TavilySearchResults(max_results=1)\n",
-    "\n",
-    "@tool\n",
-    "def crosstab(base: str, target: str):\n",
-    "    \"\"\"Use to see relationship between two varibles by looking for crosstable of them.\"\"\"\n",
-    "    ctab = survey.crosstab(base=base, target=target)\n",
-    "    return ctab.df.to_string()\n",
-    "\n",
-    "@tool\n",
-    "def get_question_info(question_code):\n",
-    "    \"\"\"Use to get question info by question code\"\"\"\n",
-    "    question = survey[question_code]\n",
-    "    answers = \"\"\n",
-    "    for answer in question.answers:\n",
-    "        answers += f\"        --> {answer.scale} - {answer.text} - num_respondent: {len(answer.respondents)}\\n\"\n",
-    "    describe = f\"\"\"\n",
-    "Question(code={question.code}, text={question.text}, type={question.type}, num_answers={len(question.answers)}, num_respondent={len(question.respondents)})\n",
-    "-> answers:\n",
-    "{answers}\n",
-    "\"\"\"\n",
-    "    return describe"
+    "graph = PAAMSupervisor(llm, survey).initialize()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "members = ['crosstaber', 'question_getter']\n",
-    "options = members + ['FINISH']\n",
+    "message = \"Hello\"\n",
     "\n",
-    "system_prompt = (\n",
-    "    \"You are a supervisor tasked with managing a conversation between the\"\n",
-    "    f\" following workers: {members}. Given the following user request,\"\n",
-    "    \" respond with the worker to act next. Each worker will perform a\"\n",
-    "    \" task and respond with their results and status. When finished,\"\n",
-    "    \" respond with FINISH.\"\n",
-    ")"
+    "inputs = {\"messages\": [HumanMessage(content=message)]}\n",
+    "\n",
+    "msgs = []\n",
+    "\n",
+    "async for msg in graph.astream(inputs, stream_mode=\"values\"):\n",
+    "    msgs.append(msg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'messages': [HumanMessage(content='Hello', additional_kwargs={}, response_metadata={}, id='ec017120-fb96-4ffe-baf2-e2692541ae74')]}\n",
+      "{'messages': [HumanMessage(content='Hello', additional_kwargs={}, response_metadata={}, id='ec017120-fb96-4ffe-baf2-e2692541ae74')], 'next': 'FINISH'}\n"
+     ]
+    }
+   ],
    "source": [
-    "class Router(TypedDict):\n",
-    "    \"\"\"Worker to route to next. If no workers needed, route to FINISH.\"\"\"\n",
-    "    next: Literal['crosstaber', 'question_getter', 'FINISH']\n",
-    "def supervisor_node(state=MessagesState) -> Command[Literal['crosstaber', 'question_getter', '__end__']]:\n",
-    "    messages = [\n",
-    "        SystemMessage(content=system_prompt)\n",
-    "    ] + state['messages']\n",
-    "    response = llm.with_structured_output(Router).invoke(messages)\n",
-    "    goto = END if response['next'] == 'FINISH' else response['next']\n",
-    "    return Command(goto=goto)"
+    "for m in msgs:\n",
+    "    print(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello. How are you\n",
+      "Hello. How are you\n",
+      "Hello. How are you\n",
+      "Hello! I'm just a computer program, so I don't have feelings, but I'm here to help you with any questions you may have. How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
-    "ctab_agent = create_react_agent(llm, tools=[crosstab], state_modifier=\"You are an analyzer who professional in crosstab data based on two question code provided.\")\n",
-    "\n",
-    "def ctab_node"
+    "for m in msgs:\n",
+    "    for msg in m[\"messages\"]:\n",
+    "        print(msg.content)"
    ]
   },
   {
@@ -143,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
