--- a/paam-backend/test.ipynb
+++ b/paam-backend/test.ipynb
@@ -6,130 +6,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "\n",
-    "_ = load_dotenv(find_dotenv())\n"
+    "from pptx import Presentation\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "no pq wrapper available.\nAttempts made:\n- couldn't import psycopg 'c' implementation: No module named 'psycopg_c'\n- couldn't import psycopg 'binary' implementation: No module named 'psycopg_binary'\n- couldn't import psycopg 'python' implementation: argument should be a str or an os.PathLike object where __fspath__ returns a str, not 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mapp\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mengine\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Survey, QuestionPro\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mapp\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mengine\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PAAMSupervisor\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmessages\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m HumanMessage\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\paam\\paam-backend\\app\\engine\\ai\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchat\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PAAMSupervisor, AnalyzerAgent, ResearchAgent\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\paam\\paam-backend\\app\\engine\\ai\\chat\\__init__.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01manalyzer_agent\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AnalyzerAgent\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mresearch_agent\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ResearchAgent\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msupervisor\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PAAMSupervisor\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\paam\\paam-backend\\app\\engine\\ai\\chat\\supervisor.py:7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CompiledStateGraph\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcheckpoint\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmemory\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MemorySaver \n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlanggraph\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcheckpoint\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpostgres\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PostgresSaver\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping_extensions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TypedDict, Literal, List\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv, find_dotenv\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\paam\\paam-backend\\venv\\Lib\\site-packages\\langgraph\\checkpoint\\postgres\\__init__.py:7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Any, Optional\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrunnables\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RunnableConfig\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpsycopg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Capabilities, Connection, Cursor, Pipeline\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpsycopg\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrows\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DictRow, dict_row\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpsycopg\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtypes\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mjson\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Jsonb\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\paam\\paam-backend\\venv\\Lib\\site-packages\\psycopg\\__init__.py:9\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Copyright (C) 2020 The Psycopg Team\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlogging\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pq  \u001b[38;5;66;03m# noqa: F401 import early to stabilize side effects\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m types\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m postgres\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\paam\\paam-backend\\venv\\Lib\\site-packages\\psycopg\\pq\\__init__.py:117\u001b[0m\n\u001b[0;32m    108\u001b[0m         sattempts \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattempt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m attempt \u001b[38;5;129;01min\u001b[39;00m attempts)\n\u001b[0;32m    109\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\n\u001b[0;32m    110\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;130;01m\\\u001b[39;00m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;124mno pq wrapper available.\u001b[39m\n\u001b[0;32m    112\u001b[0m \u001b[38;5;124mAttempts made:\u001b[39m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;132;01m{\u001b[39;00msattempts\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m    114\u001b[0m         )\n\u001b[1;32m--> 117\u001b[0m \u001b[43mimport_from_libpq\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    119\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    120\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mConnStatus\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    121\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPipelineStatus\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    136\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mversion_pretty\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    137\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\hoang\\OneDrive\\Desktop\\paam\\paam-backend\\venv\\Lib\\site-packages\\psycopg\\pq\\__init__.py:109\u001b[0m, in \u001b[0;36mimport_from_libpq\u001b[1;34m()\u001b[0m\n\u001b[0;32m    107\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    108\u001b[0m         sattempts \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m- \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattempt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m attempt \u001b[38;5;129;01min\u001b[39;00m attempts)\n\u001b[1;32m--> 109\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\n\u001b[0;32m    110\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;130;01m\\\u001b[39;00m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;124mno pq wrapper available.\u001b[39m\n\u001b[0;32m    112\u001b[0m \u001b[38;5;124mAttempts made:\u001b[39m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;132;01m{\u001b[39;00msattempts\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m    114\u001b[0m         )\n",
-      "\u001b[1;31mImportError\u001b[0m: no pq wrapper available.\nAttempts made:\n- couldn't import psycopg 'c' implementation: No module named 'psycopg_c'\n- couldn't import psycopg 'binary' implementation: No module named 'psycopg_binary'\n- couldn't import psycopg 'python' implementation: argument should be a str or an os.PathLike object where __fspath__ returns a str, not 'NoneType'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from app.engine import Survey, QuestionPro\n",
-    "from app.engine.ai import PAAMSupervisor\n",
-    "from langchain_core.messages import HumanMessage\n"
+    "prs = Presentation(\"ppt_template.pptx\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "questionpro = QuestionPro(\n",
-    "    survey_id='12032803', \n",
-    "    api_key='61d15ae9-8995-4f6b-88ac-3a66e752a3cc'\n",
-    ")\n",
-    "await questionpro.fetch_data()\n",
-    "data = questionpro.data\n",
-    "survey = Survey(data=data)\n",
-    "survey.initialize()\n"
+    "slide = prs.slides.add_slide(prs.slides[0].slide_layout)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
-    "llm = ChatOpenAI(model='gpt-3.5-turbo', streaming=True)\n",
-    "graph = PAAMSupervisor(llm, survey).initialize()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "message = \"Hello\"\n",
-    "\n",
-    "inputs = {\"messages\": [HumanMessage(content=message)]}\n",
-    "\n",
-    "msgs = []\n",
-    "\n",
-    "async for msg in graph.astream(inputs, stream_mode=\"values\"):\n",
-    "    msgs.append(msg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'messages': [HumanMessage(content='Hello', additional_kwargs={}, response_metadata={}, id='ec017120-fb96-4ffe-baf2-e2692541ae74')]}\n",
-      "{'messages': [HumanMessage(content='Hello', additional_kwargs={}, response_metadata={}, id='ec017120-fb96-4ffe-baf2-e2692541ae74')], 'next': 'FINISH'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for m in msgs:\n",
-    "    print(m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. How are you\n",
-      "Hello. How are you\n",
-      "Hello. How are you\n",
-      "Hello! I'm just a computer program, so I don't have feelings, but I'm here to help you with any questions you may have. How can I assist you today?\n"
-     ]
-    }
-   ],
-   "source": [
-    "for m in msgs:\n",
-    "    for msg in m[\"messages\"]:\n",
-    "        print(msg.content)"
+    "prs.save(\"ppt_test.pptx\")"
    ]
   },
   {
