--- a/paam-backend/test.ipynb
+++ b/paam-backend/test.ipynb
@@ -2,38 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pptx import Presentation\n"
+    "from pydantic import BaseModel\n",
+    "class TestSchema(BaseModel):\n",
+    "    a: int\n",
+    "    b: str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prs = Presentation(\"ppt_template.pptx\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "slide = prs.slides.add_slide(prs.slides[0].slide_layout)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prs.save(\"ppt_test.pptx\")"
+    "x = TestSchema(a=4, b=\"test\")"
    ]
   },
   {
